# password_generator

./: .gitignore  Cargo.toml  passwords.txt
.github/workflows/: build.yml
benches/: benchmarks.rs
src/: main.rs
