[package]
name = "password_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
text_io = "0.1.12"
cfg-if = "1.0.0"
rand-utf8 = "0.0.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false